test/asm/line-continuation-block-comment.asm
println 2 / 2

println 6 / \ ; comment
3

println 6 \ / ; comment
2

println 8 / /* hello
world */ 2

println 10 \ / 2

println 12 \ / /* hello
world */ 2

println 14 / \ /* hello
world */ 2
